blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/Client_Review__c.object-meta.xml
<CustomObject>
    <description>One scheduled review of a household's plan, usually yearly. Tracks the invitation, the meeting and the follow-up actions so no household goes unreviewed.</description>
    <label>Review</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>