blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Adviser__c.field-meta.xml
<CustomField>
    <fullName>Adviser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The adviser who runs the review.</description>
    <label>Adviser</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviews Adviser</relationshipLabel>
    <relationshipName>Client_Review_Adviser</relationshipName>
    <type>Lookup</type>
</CustomField>