blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Circumstances_changed__c.field-meta.xml
<CustomField>
    <fullName>Circumstances_changed__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>DATA PROTECTION: personal circumstances. Something material changed since the last review, such as family, income, health or goals. Detail goes in the planning system.</description>
    <label>Circumstances changed</label>
    <type>Checkbox</type>
</CustomField>