blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <description>Date by which the review should be held under the service agreement.</description>
    <label>Due date</label>
    <type>Date</type>
</CustomField>