blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every review a household has had.</description>
    <label>Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>