blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Meeting_date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_date__c</fullName>
    <description>When the review meeting is or was held.</description>
    <label>Meeting date</label>
    <type>DateTime</type>
</CustomField>