blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Missed_reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_reason__c</fullName>
    <description>Why the review did not happen. Required on the not-completed stage.</description>
    <label>Missed reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client declined</fullName>
            </value>
            <value>
                <fullName>Client unresponsive</fullName>
            </value>
            <value>
                <fullName>Moved to another adviser</fullName>
            </value>
            <value>
                <fullName>Left the practice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>