blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>What the review concluded. Reported to see how many reviews lead to new advice.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No change</fullName>
            </value>
            <value>
                <fullName>Minor changes</fullName>
            </value>
            <value>
                <fullName>New advice needed</fullName>
            </value>
            <value>
                <fullName>Service level change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>