blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Review_type__c.field-meta.xml
<CustomField>
    <fullName>Review_type__c</fullName>
    <description>The kind of review. Used to prepare the right agenda.</description>
    <label>Review type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Six-monthly</fullName>
            </value>
            <value>
                <fullName>Life event</fullName>
            </value>
            <value>
                <fullName>Ad hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>