blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Risk_profile_reconfirmed__c.field-meta.xml
<CustomField>
    <fullName>Risk_profile_reconfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The attitude to risk and capacity for loss were checked again at this review.</description>
    <label>Risk profile reconfirmed</label>
    <type>Checkbox</type>
</CustomField>