blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Meeting held</fullName>
            </value>
            <value>
                <fullName>Review completed</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>