blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/validationRules/Gate_review_cycle_booked.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_review_cycle_booked</fullName>
    <active>true</active>
    <description>Stage gate: Review cycle, Booked and later stages need Meeting date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Due", 1, "Invited", 2, "Booked", 3, "Meeting held", 4, "Review completed", 5, 0) &gt;= 3, ISBLANK(Meeting_date__c))</errorConditionFormula>
    <errorDisplayField>Meeting_date__c</errorDisplayField>
    <errorMessage>Fill in Meeting date before moving to Booked.</errorMessage>
</ValidationRule>