blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/validationRules/Gate_review_cycle_review_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_review_cycle_review_completed</fullName>
    <active>true</active>
    <description>Stage gate: Review cycle, Review completed and later stages need Outcome and Risk profile reconfirmed.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Due", 1, "Invited", 2, "Booked", 3, "Meeting held", 4, "Review completed", 5, 0) &gt;= 5, OR(ISBLANK(TEXT(Outcome__c)), NOT(Risk_profile_reconfirmed__c)))</errorConditionFormula>
    <errorMessage>Fill in Outcome and Risk profile reconfirmed before moving to Review completed.</errorMessage>
</ValidationRule>