blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Review__c/validationRules/Lost_review_cycle_not_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_review_cycle_not_completed</fullName>
    <active>true</active>
    <description>Lost reason: Review cycle, Not completed needs Missed reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Not completed"), ISBLANK(TEXT(Missed_reason__c)))</errorConditionFormula>
    <errorDisplayField>Missed_reason__c</errorDisplayField>
    <errorMessage>Fill in Missed reason before closing this as Not completed.</errorMessage>
</ValidationRule>